experiments/05-mubench-advanced/k8s-controls/11-c1-ingress-nginx-s3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-gateway-nginx
  namespace: mubench-advanced
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /s0(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gw-nginx
                port:
                  number: 80
