experiments/05-mubench-advanced/k8s-controls/11-c1-kong-s3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-gateway-kong
  namespace: mubench-advanced
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /s0
            pathType: Prefix
            backend:
              service:
                name: gw-nginx
                port:
                  number: 80
