experiments/05-mubench-advanced/k8s-controls/13-c3-basic-s3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: s3-db-ingress-basic
  namespace: mubench-advanced
spec:
  podSelector:
    matchLabels:
      app: sdb1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: ["s0", "s1", "s2", "s3", "s4", "s5", "s6", "s7"]
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 51313
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: s3-app-egress-basic
  namespace: mubench-advanced
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["s0", "s1", "s2", "s3", "s4", "s5", "s6", "s7"]
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: ["s0", "s1", "s2", "s3", "s4", "s5", "s6", "s7", "sdb1"]
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 51313
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
